--- a/src/app/components/user/games/components/play-game/play-game.component.html
+++ b/src/app/components/user/games/components/play-game/play-game.component.html
@@ -1,1 +1,6 @@
-<p>play-game works!</p>
+<app-navbar></app-navbar>
+<div class="flex flex-col h-screen">
+    <div class="mt-10 justify-center m-auto">
+    </div>
+    <app-footer></app-footer>
+</div>
