--- a/src/app/components/user/cards/cards.component.html
+++ b/src/app/components/user/cards/cards.component.html
@@ -62,15 +62,26 @@
         </div>
     </div>
     <div *ngIf="cards.length > 0" class="items-start justify-center m-auto max-w-3xl p-9 flex-grow">
-        <div class="px-4 sm:px-0">
-            <h3 class="text-lg font-medium leading-6 text-gray-900 mb-4">List of cards</h3>
+        <div class="flex">
+            <div class="px-4 sm:px-0">
+                <h3 class="text-lg font-medium leading-6 text-gray-900 mb-4">List of cards
+                    <span *ngIf="languageFilter.name">| {{languageFilter.name}}</span>
+                </h3>
+            </div>
+            <div class="ml-auto mb-2">
+                <select id="languageFilter" name="languageFilter" class="mt-1 block w-full py-2 pl-3 border border-gray-300 bg-white rounded-md shadow-sm 
+                                        focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+                    [(ngModel)]="languageFilter.name" (change)="filterCards()">
+                    <option>All</option>
+                    <option *ngFor="let language of languages" [ngValue]="language.name">
+                        {{language.name}}
+                    </option>
+                </select>
+            </div>
         </div>
         <div class="inline-grid grid-cols-3 gap-4">
-            <div *ngFor="let card of cards">
-                <app-card 
-                    routerLink="/cards" 
-                    [card]="card" 
-                    (deleteCard)="checkModal($event)">
+            <div *ngFor="let card of filteredCards">
+                <app-card routerLink="/cards" [card]="card" (deleteCard)="checkModal($event)">
                 </app-card>
             </div>
         </div>
@@ -85,11 +96,7 @@
             <h3 class="text-lg font-medium leading-6 text-gray-900 mb-4">The card list is empty</h3>
         </div>
     </div>
-    <app-modal 
-        *ngIf="showModal"
-        (accept)="deleteCard()"
-        (cancel)="showModal = false"
-        (close)="showModal = false"
-    ></app-modal>
+    <app-modal *ngIf="showModal" (accept)="deleteCard()" (cancel)="showModal = false" (close)="showModal = false">
+    </app-modal>
     <app-footer></app-footer>
 </div>
